objects/lnt__Send_Gift_Batch__mdt.object
<CustomObject>
    <fields>
        <fullName>lnt__Contact_Referernce_Name__c</fullName>
        <label>Contact_Referernce_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Date_Field_API_Name__c</fullName>
        <label>Date Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Template_Name__c</fullName>
        <label>Gift Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Lead_Reference_Name__c</fullName>
        <label>Lead_Reference_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__X_days_Before__c</fullName>
        <label>X days Before</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Send Gift Batch</label>
    <pluralLabel>Send Gift Batchs</pluralLabel>
</CustomObject>